osmfoundation.less
/* ... */
footer {
    background-color: @brand-secondary;
    max-width: 1000px;
    margin: auto;
    padding: 30px 1.5em;
    color: @footer-text-color;

    .first-row,
    .second-row {
        margin-bottom: 20px;

        @media (min-width: 768px) {
            display: flex;
            flex-direction: row-reverse;
            margin-bottom: 30px;
        }
    }

    .third-row {
        margin-bottom: 20px;

        @media (min-width: 768px) {
            display: flex;
            margin-bottom: 30px;
        }
    }

    a,
    a:visited {
        color: @footer-text-color;
    }

    a:active {
        color: darken(@footer-text-color, 30%);
    }

    a.new,
    #p-personal a.new {
        color: lighten(@new-link-color, 20%);
    }

    #footer-info {
        list-style: none;
        margin: 0;
        font-size: 0.9em;
        width: 100%;

        @media (min-width: 768px) {
            width: 50%;
        }
    }

    #mw-personal {
        width: 100%;
        margin-bottom: 10px;

        @media (min-width: 768px) {
            width: 50%;
            margin-bottom: 0;

            #p-personal {
                text-align: right;
            }
        }

        #p-personal {
            ul {
                padding-left: 0;
            }

            li {
                float: none;
                font-size: 0.9em;
                display: inline-block;

                &:first-of-type {
                    margin-left: 0;
                }

                &.active a {
                    text-decoration: underline;
                }
            }
        }

        #pt-userpage {
            background-image: none;
            padding-left: 0 !important;
        }
    }

    div.vectorTabs {
        background-image: none;
        float: none;
        height: inherit;

        ul {
            background-image: none;
            float: none;

            & > li {
                display: inline-block;
            }

            li {
                background-color: transparent;
                background-image: none;
                float: none;

                a {
                    color: @footer-text-color;
                    font-size: 0.9em;
                    height: inherit;
                    padding-right: 0;
                    padding-left: 1em;
                }

                &:first-of-type a {
                    padding-left: 0;
                }

                &.new a {
                    color: @new-link-color;
                }

                &.selected {
                    background-image: none;

                    a {
                        color: @footer-text-color !important;
                        text-decoration: underline;
                    }
                }
            }
        }

        span {
            background-image: none;

            a {
                padding-top: 0;
            }
        }
    }

    div.vectorMenu {
        float: none;

        h3 {
            font-size: 0.9em;

            a {
                right: -5px;
                height: 1.6em;
            }
        }

        h3 span {
            padding-left: 1em;
            padding-top: 0;
            color: @footer-text-color;
            font-size: inherit;
        }

        li a {
            color: @footer-text-color;
            padding: 0.8em 1.3em;
        }

        div.menu {
            top: 1.7em;
            background-color: lighten(@brand-secondary, 20%);
            border: 0;
        }
    }

    #left-navigation,
    #right-navigation,
    #p-search {
        float: none;
        margin: 0;
    }

    #search,
    .page-nav {
        width: 100%;

        @media (min-width: 768px) {
            width: 50%;
        }
    }

    #search {
        #searchform,
        #simpleSearch {
            margin-top: 0;
        }

        #simpleSearch {
            height: inherit;
            background-color: @footer-text-color;
            border-color:darken(@footer-text-color, 20%);
            background-image: none;
            color: @brand-secondary;
            padding: 5px 10px;
            width: 80%;
            max-width: none;
            box-sizing: border-box;
            margin-top: 5px;

            @media (max-width: 900px) {
                width: 100%;
            }

            @media (max-width: 768px) {
                margin-top: 15px;
            }

            #searchInput {
                color: @brand-secondary;
                font-size: inherit;
                padding-right: 2em;
            }

            #searchButton {
                width: 2.5em;
                top: 1px;
            }
        }
    }

    .page-nav {
        @media (min-width: 768px) {
            text-align: right;
        }

        #p-cactions,
        #p-views {
            display: inline-block;
        }

        #p-cactions {
            h3 {
                margin-bottom: 0;
                padding: 0;
                position: relative;
                top: 3px;
            }
        }
    }

    .powered-by {
        text-align: right;
        font-size: 0.9em;

        &,
        a,
        a:visited {
            color: lighten(@brand-secondary, 30%);
        }
    }

    .third-row {
        & > .portal:not(:first-child) {
            @media (min-width: 768px) {
                margin-left: 40px;
            }
        }
    }

    .portal {
        h3 {
            color: @footer-text-color;
        }

        .body {
            ul {
                list-style: none;
                margin: 0;
            }
        }
    }
}

.suggestions {
    .suggestions-results,
    .suggestions-special {
        background-color: @footer-text-color;
    }

    .suggestions-result-current {
        background-color: lighten(@brand-secondary, 40%);
        color: @footer-text-color;
    }
}

.search-types {
    ul li::before {
        width: 0 !important;
    }
}
/* ... */

